2006-06-04  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* speed up 3D calculation
	* reload diagram graphes only if dataset is newer
	* fixed bug scrooling with cursor down key
	* fixed small bug setting wrong changed status
	* fixed bug loosing some mouse actions
	* new feature: creating user library from subcircuits

2006-05-31  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/simmessage.cpp (startSimulator): Investigation
	about path names under Win32.  It looks like only one
	argument can be quoted on the command line of a batch
	file.  Do not know (yet) if this also applies to other
	binaries (*.exe files).

	* qucsdigi (IEEELIBS): Linking with IEEE libraries.  Thus
	it is now possible to the IEEE libraries shipped with
	FreeHDL as well.  Also made this modification in the
	'qucsdigi.bat' batch file for Win32.

	* main.cpp (checkVersion): Added a convenience function for
	version checks which was broken due to the 0.0.10 bump.
	Using the function several times throughout the code.

2006-05-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed several bugs of disappearing node labels

2006-05-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed segfault by clicking on component name
	* fixed bug: disappearing labels on aligning

2006-05-22  Stefan Jahn  <stefan@lkcc.org>

	* textdoc.cpp (markWord): Fixed segfault bug in syntax
	highlighter.

	* qucs_jp.ts: Updated Japanese translations.  Thanks to
	Toyoyuki.

2006-05-20  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new action: select all markers
	* action "new text" is now "CTRL+SHIFT+V"
	* action "print selection" is "CTRL+SHIFT+P"
	* move markers only if no other element selected
	* scrollbar of diagrams a little bit more beautiful
	* added new mathematical functions to online help
	* avoid wrong multiple-choice values in changedialog.cpp

2006-05-18  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/graph.cpp (paintLines): Fixed a segfault bug