@@ -4,7 +4,7 @@
 #
 # Automake input file.
 #
-# Copyright (C) 2004 Stefan Jahn <stefan@lkcc.org>
+# Copyright (C) 2004, 2006 Stefan Jahn <stefan@lkcc.org>
 #
 # This is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
