@@ -566,6 +566,10 @@
         <source>Cancel</source>
         <translation>İptal</translation>
     </message>
+    <message>
+        <source>Error</source>
+        <translation type="unfinished">Hata</translation>
+    </message>
 </context>
 <context>
     <name>DisplayDialog</name>
